--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
          </div>
     </main>
     <footer>
-        <h3>Feito por <a href="https://github.com/Lucasbsilva11">Lucas Balbino</a> da Silva</h3>
+        <h3>Feito por <a href="https://github.com/Lucasbsilva11">Lucas Balbino da Silva</a></h3>
     </footer>
 
     
