--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
          </div>
     </main>
     <footer>
-        <h3>Feito por <a href="https://github.com/Lucasbsilva11">Lucas Balbino da Silva</a></h3>
+        <h3><i class="fa-regular fa-copyright"></i> 2022 <a href="https://github.com/Lucasbsilva11">All Rights Reserved</a></h3>
     </footer>
 
     
