--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 </head>
 <body>
 
-   <main>
+   
+    <main>
 
-        
-        <img src="Imagens/eu preto e branco.png" alt="Foto de Perfil">
+        <img src="Imagens/eu.png" alt="">
+  
+             <!-- Lista  -->
+       
         <h1>Contatos:</h1>
          <div class="container">
             <div class="button">
