--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    
     <main>
 
-        <img src="Imagens/eu.png" alt="">
+        <img src="Imagens/eu.png" alt="Image">
   
              <!-- Lista  -->
        
