--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
          </div>
     </main>
     <footer>
-        <h3><i class="fa-regular fa-copyright"></i> 2022 <a href="https://github.com/Lucasbsilva11">All Rights Reserved</a></h3>
+        <h3><i class="fa-regular fa-copyright"></i> 2022 by <a href="https://github.com/Lucasbsilva11">Lucas B. </a>All Rights Reserved</h3>
     </footer>
 
     
